test/scc/expr/semantic-errors/147.a
147.t:3:37: error: too many initializer values